welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def PositionFinale():Boolean{
		(estFaceMur==tru && getDirection==Direction.nord)
	}

}
